# webp-rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE-LIBWEBP  OVERVIEW.ja.md  README.ja.md  README.md
examples/: bmp2webp.rs  webp2bmp.rs
src/: bmp.rs  compat.rs  image.rs  legacy.rs  lib.rs  main.rs
src/decoder/: alpha.rs  animation.rs  header.rs  lossless.rs  lossy.rs  mod.rs  quant.rs  tree.rs  vp8.rs
src/encoder/: bit_writer.rs  container.rs  huffman.rs  lossless.rs  lossy.rs  mod.rs  vp8_bool_writer.rs  writer.rs
src/encoder/lossless/: api.rs  entropy.rs  mod.rs  plans.rs  tokens.rs
src/encoder/lossy/: api.rs  bitstream.rs  mod.rs  predict.rs
tests/: bmp_tests.rs  compat_tests.rs  decoder_tests.rs  encoder_tests.rs  header_tests.rs
